DDT-1059 moved PartyContactDetailsMapper to shared_kernel